--- a/package.json
+++ b/package.json
@@ -18,13 +18,17 @@
   },
   "homepage": "https://github.com/WNC-HCMUS-2021/Final-Project-Backend#readme",
   "dependencies": {
-    "ajv": "^8.5.0",
+    "ajv": "^6.12.6",
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
+    "jsonwebtoken": "^8.5.1",
     "knex": "^0.95.6",
     "morgan": "^1.10.0",
     "mysql2": "^2.2.5",
-    "nodemon": "^2.0.7"
+    "nodemon": "^2.0.7",
+    "randomstring": "^1.2.1"
   }
 }
