--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "knex": "^0.95.6",
     "morgan": "^1.10.0",
     "mysql2": "^2.2.5",
+    "nodemailer": "^6.6.3",
     "nodemon": "^2.0.7",
     "randomstring": "^1.2.1",
     "request": "^2.88.2"
